--- a/Transciever/frmMain.resx
+++ b/Transciever/frmMain.resx
@@ -126,6 +126,9 @@
   <metadata name="tltMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>292, 6</value>
   </metadata>
+  <metadata name="tltMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>292, 6</value>
+  </metadata>
   <metadata name="tssMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>198, 6</value>
   </metadata>
